<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:src="@drawable/baseline_delete_24"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/reportView"
            style="@style/newsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingBottom="5dp"
            android:text="@string/approvedreport"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edittypeofWaste"
            android:layout_width="319dp"
            android:layout_height="68dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/addtypeofwaste"
            android:inputType="textMultiLine"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@+id/updateImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/updateStatusBtn"
            android:layout_width="317dp"
            android:layout_height="45dp"
            android:layout_marginTop="44dp"
            android:text="@string/updates"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateImg" />

        <TextView
            android:id="@+id/AddressView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/Address"
            app:layout_constraintBottom_toTopOf="@+id/editTextAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reportView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/typeofWasteView"
            style="@style/newsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:paddingBottom="5dp"
            android:text="@string/typeofwaste"
            app:layout_constraintBottom_toTopOf="@+id/edittypeofWaste"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/addaddress"
            android:inputType="text"
            android:enabled="false"
            app:layout_constraintBottom_toTopOf="@+id/descView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editdescription"
            android:layout_width="319dp"
            android:layout_height="68dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/adddescription"
            android:enabled="false"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/typeofWasteView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/updateImg"
            android:layout_width="318dp"
            android:layout_height="164dp"
            android:layout_marginBottom="16dp"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintBottom_toTopOf="@+id/editdescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descView"
            style="@style/newsInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/description"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/editdescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>