<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.update.UpdateReport">


    <ImageView
        android:id="@+id/updateImg"
        android:layout_width="318dp"
        android:layout_height="164dp"
        android:layout_marginBottom="204dp"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/addaddress"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/updateImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AddressView"
        style="@style/newsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Address"
        app:layout_constraintBottom_toTopOf="@+id/editTextAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="319dp"
        android:layout_height="68dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/addrecyclepointname"
        android:inputType="textMultiLine"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/AddressView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameView"
        app:layout_constraintVertical_bias="0.269" />

    <TextView
        android:id="@+id/nameView"
        style="@style/newsInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/recyclepointName"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="99dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
