
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wallpapergreen">

        <TextView
            android:id="@+id/Selection_Title"
            style="@style/newsInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/reportadmin"
            android:layout_width="173dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="184dp"
            android:background="@drawable/btn_1"
            android:text="@string/report"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/recycle_Pointadmin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/recycle_Pointadmin"
            android:layout_width="178dp"
            android:layout_height="48dp"
            android:layout_marginBottom="272dp"
            android:background="@drawable/btn_1"
            android:text="@string/recycle_Point"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>